# vulkan-with-classes

./: AssimpMeshLoader.h  Buffer.h  CMakeLists.txt  Camera.cpp  CameraController.h  CommandBuffer.cpp  CommandBuffer.h  CommandPool.h  Controller.h  DescriptorSet.cpp  DescriptorSet.h  Device.cpp  Device.h  Framebuffer.h  Frustum.h  Log.cpp  Log.h  Mesh.cpp  Mesh.h  Model.h  Pipeline.h  README.md  ScreenQuad.h  Semaphore.h  StatisticsPool.h  SwapChain.h  Texture.cpp  Texture.h  TimestampPool.h  VulkanWindow.cpp  VulkanWindow.h  bbox.h  example-1.cpp  example-2.cpp  example-3.cpp  example-4.cpp  example-bezier.cpp  example-bindless.cpp  example-buffer-address.cpp  example-deferred-2.cpp  (+18 more)
shaders/: _compile_shaders.py  bezier.frag  bezier.tesc  bezier.tese  bezier.vert  blinn-phong.frag  blinn-phong.vert  decal.frag  decal.vert  depthpass.frag  depthpass.vert  ds-3-1.vert  ds-3-2.frag  ds-3-3.frag  hedgehog.frag  hedgehog.geom  hedgehog.vert  model-pbr.frag  model-pbr.vert  particles-compute.comp  shader-bindless.frag  shader-bindless.vert  shader-buffer-address.vert  shader-descriptor-buffer.frag  shader-descriptor-buffer.vert  shader-dynamic-uniform.frag  shader-dynamic-uniform.vert  shader-instanced.vert  shader-push-constants.vert  shader-tex.frag  shader-tex.vert  shader.2.frag  shader.2.vert  shader.3.frag  shader.4.vert  shadow.frag  shadow.vert  simple.frag  simple.vert  test-compute.comp  (+4 more)
